# leafpad

./: Makefile  Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.ac
data/: Makefile  Makefile.am  Makefile.in  leafpad.desktop  leafpad.desktop.in
data/icons/: Makefile  Makefile.am  Makefile.in
data/icons/16x16/: Makefile  Makefile.in
data/icons/22x22/: Makefile  Makefile.in
data/icons/24x24/: Makefile  Makefile.in
data/icons/32x32/: Makefile  Makefile.in
data/icons/40x40/: Makefile  Makefile.am  Makefile.in
data/icons/48x48/: Makefile  Makefile.am  Makefile.in
data/icons/50x50/: Makefile  Makefile.am  Makefile.in
data/icons/64x64/: Makefile  Makefile.am  Makefile.in
data/icons/scalable/: Makefile  Makefile.in
po/: .intltool-merge-cache  Makefile  Makefile.in  bg.gmo  bg.po  br.gmo  br.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  es.gmo  es.po  eu.gmo  eu.po  fi.gmo  fi.po  fr.gmo  fr.po  ga.gmo  ga.po  he.gmo  he.po  hu.gmo  hu.po  id.gmo  id.po  it.gmo  it.po  ja.gmo  ja.po  ko.gmo  ko.po  lt.gmo  (+35 more)
src/: Makefile  Makefile.am  Makefile.in  callback.c  callback.h  dialog.c  encoding.c  encoding.h  file.c  file.h  font.c  gtkprint.c  indent.c  leafpad  linenum.c  linenum.h  main.c  menu.c  search.c  search.h  selector.c  undo.c  utils.c  utils.h  view.c  window.c  window.h
src/.deps/: leafpad-about.Po  leafpad-callback.Po  leafpad-dialog.Po  leafpad-dnd.Po  leafpad-emacs.Po  leafpad-encoding.Po  leafpad-file.Po  leafpad-font.Po  leafpad-gnomeprint.Po  leafpad-gtkprint.Po  leafpad-gtksourceiter.Po  leafpad-hlight.Po  leafpad-indent.Po  leafpad-linenum.Po  leafpad-main.Po  leafpad-menu.Po  leafpad-search.Po  leafpad-selector.Po  leafpad-undo.Po  leafpad-utils.Po  leafpad-view.Po  leafpad-window.Po
src/charset-detector/: Makefile  Makefile.in
src/charset-detector/include/: Makefile  Makefile.in
src/charset-detector/src/: Makefile  Makefile.in
src/charset-detector/src/.deps/: CharDistribution.Po  JpCntx.Po  LangBulgarianModel.Po  LangCyrillicModel.Po  LangGreekModel.Po  LangHebrewModel.Po  LangHungarianModel.Po  LangThaiModel.Po  impl.Po  nsBig5Prober.Po  nsCharSetProber.Po  nsEUCJPProber.Po  nsEUCKRProber.Po  nsEUCTWProber.Po  nsEscCharsetProber.Po  nsEscSM.Po  nsGB2312Prober.Po  nsHebrewProber.Po  nsLatin1Prober.Po  nsMBCSGroupProber.Po  nsMBCSSM.Po  nsSBCSGroupProber.Po  nsSBCharSetProber.Po  nsSJISProber.Po  nsUTF8Prober.Po  nsUniversalDetector.Po
src/charset-detector/src/entry/: Makefile  Makefile.in
src/charset-detector/src/tables/: Makefile  Makefile.in
src/charset-detector/test/: Makefile  Makefile.in  test-chardetect
src/charset-detector/test/.deps/: test-chardetect.Po
